[ios] Fixed GetIndexForOffset for pending transient items.

GetIndexForOffset() should decrease resulting index by 1 for pending
transient items to allow going back from interstitials that were added
to the middle of the stack.

BUG=677190

Review-Url: https://codereview.chromium.org/2600263002
Cr-Commit-Position: refs/heads/master@{#440808}

Former-commit-id: 8f276d123db9ccd82569be7cb8658fde3999ae59